# clamav-client

./: Cargo.toml  LICENSE  README.md  docker-compose.yml
src/: lib.rs  ping.rs  responses.rs  scan.rs  version.rs
