[package]
name = "clamav-tcp"
version = "0.2.1"
description = "ClamAV TCP client"
license = "MIT"
documentation = "https://docs.rs/clamav-tcp"
edition = "2021"
repository = "https://github.com/tatupesonen/clamav-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.148", features = ["derive"] }
thiserror = "1.0.37"
